# zim-mcp

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  tool_message_structure.md
.github/: release.yml
examples/: config.env  mcp_client_config.json
src/zim_mcp/: __init__.py  __main__.py  config.py  content_extractor.py  file_discovery.py  models.py  search_engine.py  server.py  utils.py  zim_manager.py
